# simple-lama-inpainting

./: README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package.yml
simple_lama_inpainting/: __init__.py  cli.py
simple_lama_inpainting/models/: model.py
simple_lama_inpainting/utils/: util.py
src/simple_lama_inpainting/: __init__.py  cli.py
src/simple_lama_inpainting/models/: __init__.py  model.py
src/simple_lama_inpainting/utils/: __init__.py  util.py
tests/: conftest.py  test_lama.py
