[metadata]
name = simple_lama_inpainting
version = 0.1.0
author = Enes Muvahhid Şahin
author_email = enessahin@outlook.com
description = Simplified LaMa Inpainting
long_description = file: README.md, LICENSE
long_description_content_type = text/markdown
url = https://github.com/enesmsahin/simple-lama-inpainting.git
project_urls =
    Bug Tracker = https://github.com/enesmsahin/simple-lama-inpainting/issues
    repository = https://github.com/enesmsahin/simple-lama-inpainting.git
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
keywords = 
    lama inpainting
    inpainting

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    numpy
    opencv_python
    Pillow
    torch
    torchvision
    fire

[options.packages.find]
where = src

[options.entry_points]
console_scripts = 
    simple_lama = simple_lama_inpainting.cli:lama_cli